[package]
name = "may-you-find"
version = "0.1.0"
edition = "2021"
description = "Preinitialized autocompletion provider for Ghoulean's Discord bot"
# prevent accidental publishing
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strprox = { version = "0.3.3", features = ["wasm"] }
wasm-bindgen = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 's'